Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <li>4 slices of cheese
       <ul>
         <li>Pepper Jack</li>
+        <li>Cheddar</li>
+        <li>Mozzarella</li>
       </ul>
     </li>
     <li>1 tbsp of butter</li>
